fixed the styles bug on mobile

--- a/styles/query.module.css
+++ b/styles/query.module.css
@@ -34,6 +34,7 @@
 .formButton {
   margin-top: 1px;
   margin-bottom: 1px;
+  margin-right: -5px;
   padding: 0.5rem 1rem;
   border-left: 1px solid #252525;
   border-top: none;
